--- a/requirements.txt
+++ b/requirements.txt
@@ -22,4 +22,6 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 webencodings==0.5.1
 whitenoise==6.5.0
+crispy-bootstrap5==0.7
+django-crispy-forms==2.3
 
